# Graphics

./: .gitignore  CMakeLists.txt  README.md  config.yml  temp.cpp  temp.txt
assets/: fragment.glsl  vertex.glsl
assets/fragment/: fragment.glsl  global.glsl  header.glsl
include/: dependencies.hpp
include/buffers/: EBO.hpp  SSBO.hpp  VAO.hpp  VBO.hpp
include/camera/: camera.hpp
include/glad/: glad.h
include/gui/: gui.hpp
include/physics/: collider.hpp
include/screen/: screen.hpp
include/shader/: shader.hpp
include/shape/: cuboid.hpp  light.hpp  material.hpp  plane.hpp  shape.hpp  sphere.hpp
include/texture/: cubemap.hpp  texture.hpp
include/utils/: utils.hpp
lib/: glad.c
src/: camera.cpp  cubemap.cpp  main.cpp  screen.cpp  shader.cpp  texture.cpp  utils.cpp
src/buffers/: EBO.cpp  VAO.cpp  VBO.cpp
src/gui/: gui.cpp
src/physics/: collider.cpp
src/shape/: cuboid.cpp  light.cpp  material.cpp  plane.cpp  shape.cpp  sphere.cpp
